--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
   "minimum-stability": "stable",
   "license": "MIT",
   "type": "library",
-  "require": {},
+  "require": {
+    "psr/log": "^1.1"
+  },
   "suggest": {},
   "autoload": {
     "psr-4": {
